<!--
  ~ Copyright 2020 V App Factory
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Movie Bucket</string>
    <string name="title_activity_main">@string/app_name</string>
    <string name="title_shuffle">Shuffle</string>
    <string name="title_bucket_list">Bucket List</string>
    <string name="title_search">Search</string>
    <string name="title_settings">Settings</string>
    <string name="title_library">Library</string>
    <string name="bucket_list_is_empty">Your bucket list is empty. Movies you add to your bucket will appear here.</string>
    <string name="no_movies_yet">No movies yet</string>
    <string name="title_popular">Popular</string>
    <string name="title_top_rated">Top Rated</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_liked_movies">Liked by You</string>
    <string name="title_watched">Watched</string>
    <string name="search_for_a_movie">Search for a movie</string>
    <string name="title_search_result">Search Results</string>
    <string name="open">open</string>
    <string name="could_not_find_that">Couldn\'t find that</string>
    <string name="try_searching_again_using_a_different_spelling">Try searching again using a different spelling.</string>
    <string name="action_bucket">Bucket</string>
    <string name="action_like">Like</string>
    <string name="action_liked">Liked</string>
    <string name="action_share">Share</string>
    <string name="action_watch">Watch</string>
    <string name="action_watched">Watched</string>
    <string name="source">Source</string>
    <string name="title_details">Movie Details</string>
    <string name="something_went_wrong_when_trying_to_connect">Something went wrong when trying to connect.</string>
    <string name="abbr_hours">h</string>
    <string name="abbr_minutes">m</string>
    <string name="tmdb">TMDb</string>
    <string name="title_bucket">Bucket</string>
</resources>
