<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2020 V App Factory
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_list">

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.vignesh.moviebucket.ui.bucketlist.BucketListFragment"
        android:label="@string/title_bucket_list"
        tools:layout="@layout/fragment_list" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.vignesh.moviebucket.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_navigation_search_to_movie_detail_fragment"
            app:destination="@id/movie_detail_fragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_library"
        android:name="com.vignesh.moviebucket.ui.library.LibraryFragment"
        android:label="@string/title_library"
        tools:layout="@layout/fragment_library">
        <action
            android:id="@+id/action_navigation_library_to_movieDetailFragment"
            app:destination="@id/movie_detail_fragment" />
    </fragment>
    <fragment
        android:id="@+id/movie_detail_fragment"
        android:name="com.vignesh.moviebucket.ui.detail.MovieDetailFragment"
        android:label="@string/title_details"
        tools:layout="@layout/fragment_detail">
        <argument
            android:name="movieId"
            app:argType="string" />
    </fragment>
</navigation>