<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2020 V App Factory
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:id="@+id/top_view"
                android:layout_width="match_parent"
                android:layout_height="0dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/title_library"
                android:textAppearance="?textAppearanceHeadline3" />

            <LinearLayout
                android:id="@+id/popular_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="visible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/title_popular"
                    android:textAppearance="?textAppearanceHeadline6" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/popular_movies_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:overScrollMode="never"
                    tools:itemCount="1"
                    tools:listitem="@layout/item_library" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/top_rated_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="visible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/title_top_rated"
                    android:textAppearance="?textAppearanceHeadline6" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/top_rated_movies_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:overScrollMode="never"
                    tools:itemCount="1"
                    tools:listitem="@layout/item_library" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/upcoming_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="visible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/title_upcoming"
                    android:textAppearance="?textAppearanceHeadline6" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/upcoming_movies_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:overScrollMode="never"
                    tools:itemCount="1"
                    tools:listitem="@layout/item_library" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/liked_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="visible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/title_liked_movies"
                    android:textAppearance="?textAppearanceHeadline6" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/liked_movies_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:overScrollMode="never"
                    tools:itemCount="1"
                    tools:listitem="@layout/item_library" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/watched_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="visible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/title_watched"
                    android:textAppearance="?textAppearanceHeadline6" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/watched_movies_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:overScrollMode="never"
                    tools:itemCount="1"
                    tools:listitem="@layout/item_library" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</layout>