<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2020 V App Factory
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="movie"
            type="com.vignesh.moviebucket.data.model.Movie" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/details_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:scrollbars="none"
            android:visibility="invisible"
            tools:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <View
                    android:id="@+id/top_view"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" />

                <ImageView
                    android:layout_width="256dp"
                    android:layout_height="384dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@{movie.title}"
                    android:scaleType="centerCrop"
                    app:image_path="@{movie.posterPath}"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/title_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@{movie.title}"
                    android:textAlignment="center"
                    android:textAppearance="?textAppearanceHeadline6"
                    tools:text="@tools:sample/full_names" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/release_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:text="@{movie.releaseDate}"
                        android:textAppearance="?textAppearanceBody1"
                        tools:text="@tools:sample/date/mmddyy" />

                    <View
                        android:layout_width="4dp"
                        android:layout_height="4dp"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/dot_background" />

                    <TextView
                        android:id="@+id/runtime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:textAppearance="?textAppearanceBody1"
                        tools:text="@tools:sample/date/mmddyy" />

                    <View
                        android:layout_width="4dp"
                        android:layout_height="4dp"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/dot_background" />

                    <TextView
                        android:id="@+id/rating_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{movie.rating}"
                        android:textAppearance="?textAppearanceBody1"
                        tools:text="9.0" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@{movie.genre}"
                    android:textAlignment="center"
                    android:textAppearance="?textAppearanceBody2"
                    tools:text="@tools:sample/full_names" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="16dp"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableTop="@drawable/ic_baseline_add_24"
                            android:text="@string/action_bucket"
                            android:textAlignment="center"
                            android:textAppearance="?textAppearanceBody2" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableTop="@drawable/ic_outline_thumb_up_24"
                            android:text="@string/action_like"
                            android:textAlignment="center"
                            android:textAppearance="?textAppearanceBody2" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableTop="@drawable/ic_outline_movie_24"
                            android:text="@string/action_watch"
                            android:textAlignment="center"
                            android:textAppearance="?textAppearanceBody2" />
                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@{movie.overView}"
                    android:textAppearance="?textAppearanceBody2"
                    tools:height="100dp"
                    tools:text="@tools:sample/lorem/random" />

                <TextView
                    android:id="@+id/cast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@{movie.cast}"
                    android:textAppearance="?textAppearanceBody2"
                    tools:height="100dp"
                    tools:text="@tools:sample/lorem/random" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Credits"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/source" />

                    <ImageView
                        android:layout_width="128dp"
                        android:layout_height="16dp"
                        android:layout_marginBottom="16dp"
                        android:contentDescription="@string/tmdb"
                        android:src="@drawable/ic_tmdb_blue_short" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <ProgressBar
            android:id="@+id/loading_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            tools:visibility="invisible" />

        <LinearLayout
            android:id="@+id/error_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="invisible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/something_went_wrong_when_trying_to_connect"
                android:textAlignment="center"
                android:textAppearance="?textAppearanceBody2" />

        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>